--- a/styles/global.scss
+++ b/styles/global.scss
@@ -319,12 +319,15 @@ footer {
 @media screen and (max-width: 800px) {
 
  .hero{
+  padding-top: 90px;
   .hero-title {
     font-size:50px;
     line-height: 75px;
     font-weight: 600;
     margin: $xl-6 0;
-    padding-right: 20px;
+    // padding-right: 15px;
+    padding-left: 20px;
+    text-align: center;
   }
 
   .sub-heading {
