--- a/styles/header.scss
+++ b/styles/header.scss
@@ -26,9 +26,18 @@ header {
     height: 2px;
     background-color: $green;
   }
+  
+}
+.mobileNav{
+  width: 0;
+  overflow: hidden;
 }
 
+
 @media screen and (max-width: 800px) {
+  .mobileNav{
+    width: auto;
+  }
   header {
     nav {
       display: none;
@@ -39,7 +48,9 @@ header {
       left: 0;
       width: 100%;
       height: 100vh;
-      padding: 20px;
+      padding-top: 20px;
+      padding-left: 20px;
+      padding-right: 140px;
       background: $dark;
       display: flex;
       flex-direction: column;
