--- a/styles/_common.scss
+++ b/styles/_common.scss
@@ -81,8 +81,9 @@
   .card-img {
     margin-bottom: 30px;
     img {
-      width: 100%;
-      height: 100%;
+      width: 250px;
+      height: 250px;
+      max-width: auto;
       object-fit: cover;
       border-radius: 50px 0 50px 0;
     }
